[package]
name = "TickEx"
version = "0.1.0"
authors = ["Ondrej Babec <ond.babec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy = { version = "0.1.0", default-features = false, features = ["std"] }
drogue-device = { version = "0.1.0", default-features = false, features = ["log", "std"] }
env_logger = "0.9.0"
log = "0.4.14"

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "d76cd5ceaf5140c48ef97180beae156c0c0e07c8" }
drogue-device = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "c53431c07aaa351f9d37a387af2df0aec52b6b82" }